# x-verba

./: LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: publish.yml
evidence/: FINDINGS-SUMMARY.md  anthropic-sdk-before-after.md  anthropic-sdk-governance-filled.yaml  anthropic-sdk-test-matrix-filled.yaml  safi-analysis.md
evidence/scans/: anthropic-scan.md  autogen-scan.md  crewai-scan.md  dify-scan.md  governed-baseline.md  langchain-scan.md  lerobot-scan.md  openai-scan.md  safi-scan.md  semantic-kernel-scan.md  verba-rag-scan.md
