[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x-verba"
version = "0.2.0"
description = "Find the governance gaps in your code before your users do."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Super Semantics", email = "hello@supersemantic.ai" }
]
keywords = [
  "governance", "ai-safety", "static-analysis",
  "drift-detection", "policy-as-code", "verbanatomy"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security",
]
requires-python = ">=3.9"
dependencies = [
  "click>=8.0",
  "pyyaml>=6.0",
  "rich>=13.0",
]

[project.scripts]
x-verba = "x_verba.cli:main"

[project.urls]
Homepage = "https://github.com/4vish/x-verba"
Repository = "https://github.com/4vish/x-verba"
Documentation = "https://github.com/4vish/x-verba#readme"

[tool.setuptools.packages.find]
where = ["packages/python"]
include = ["x_verba*"]

[tool.setuptools.package-data]
x_verba = ["taxonomy/*.json"]

[tool.xverba]
# Default configuration for x-verba scan.
# Override any of these via CLI flags.
context_profile = "ai-app"
output_formats = ["yaml"]
generate_test_matrix = true
strict_ai_only = false
